@startuml

title __SERVER's Class Diagram__\n

  package Server {
    class ServerClient {
        + name : String
        + address : InetAddress
        + port : int
        - ID : int
        + attempt : int
        + ServerClient()
        + getID()
    }
  }
  

  package Server {
    class ServerController {
        + messageField : TextField
        + chatLog : TextArea
        - clients : ArrayList<ServerClient>
        - clientResponse : ArrayList<Integer>
        - running : boolean
        - run : Thread
        - manage : Thread
        - recieve : Thread
        - send : Thread
        - socket : DatagramSocket
        {static} - MAX_ATTEMPTS : int
        - printMessages : boolean
        + initialize()
        + onKeyPressed()
        + buttonClick()
        - print()
        + run()
        + manage()
        - sendStatus()
        + receive()
        - send()
        - sendToAll()
        - processMessage()
        - disconnect()
    }
  }
  

  package Server {
    class ServerMain {
        + start()
    }
  }
  

  package Server {
    class UniqueID {
        {static} - ids : ArrayList<Integer>
        {static} - RANGE : int
        {static} - index : int
        - UniqueID()
        {static} + getIdentifier()
    }
  }
  

  ServerController -up-|> Runnable
  ServerController -up-|> Initializable
  ServerMain -up-|> Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
